Adjusted Header settings

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -34,15 +34,13 @@
 					<table border="0" width="100%" cellpadding="10">
 						<tr>
 							<td width="15%">
-								<input type="button" name="About" value="User Guide" onClick="getMathAbout(this)"
-									   style="font-size:.9em; height:1.8em;" />
+								<input type="button" name="About" value="User Guide" onClick="getMathAbout(this)" />
 							</td>
-						</tr>
-						<tr>
-							<td width="25%"	style="font-size:.9em; height:1.7em;">
+							<td width="55%"	style="font-size:.9em; height:1.7em;">
 								Email errors, comments or suggestions to
 								<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
 							</td>
+							<td width="30%"></td>
 						</tr>
 					</table>
 					<table>
