--- a/src/main/webapp/SqlFormatter.html
+++ b/src/main/webapp/SqlFormatter.html
@@ -22,7 +22,13 @@
 									<td width="15%">								
 										<input type="button" name="About" value="About" onClick="getSqlAbout(this)" />
 									</td>
+									<td width="55%">Email errors, comments or suggestions to
+										<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+									</td>
+									<td width="=30%"></td>
 								</tr>
+							</table>
+							<table>
 								<tr>
 									<td width="10%">Other links:</td>
 									<td width="10%">
@@ -37,18 +43,11 @@
 									<td width="10%">
 										<a href="./XmlFormatter.html">Xml Formatter</a>
 									</td>
+
 								</tr>
 							</table>
 						</h4>
 					</td>							
-				</tr>
-				<tr>
-					<h3>
-						<td width="25%"
-							style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
-							<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
-						</td>
-					</h3>
 				</tr>
 			</table>
 			<br />					
