--- a/src/main/webapp/XmlFormatter.html
+++ b/src/main/webapp/XmlFormatter.html
@@ -22,7 +22,13 @@
 									<td width="15%">								
 										<input type="button" name="About" value="About" onClick=getXmlAbout(this) />
 									</td>
+									<td width="55%">Email errors, comments or suggestions to
+										<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+									</td>
+									<td width="30%"></td>
 								</tr>
+							</table>
+							<table>
 								<tr>
 									<td width="10%">Other links:</td>
 									<td width="10%">
@@ -41,12 +47,6 @@
 							</table>
 						</h4>
 					</td>							
-				</tr>
-				<tr>
-					<td width="15%"
-						style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
-						<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
-					</td>
 				</tr>
 			</table>
 			<br />					
