--- a/src/main/webapp/PasswordGenerator.html
+++ b/src/main/webapp/PasswordGenerator.html
@@ -36,15 +36,12 @@
                     <table border="0" width="100%" cellpadding="10">
                         <tr>
                             <td width="15%">
-                                <input type="button" name="About" value="User Guide" onClick="getPasswordAbout(this)"
-                                       style="font-size:.9em; height:1.8em;" />
+                                <input type="button" name="About" value="User Guide" onClick="getPasswordAbout(this)" />
                             </td>
-                        </tr>
-                        <tr>
-                            <td width="25%"
-                                style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+                            <td width="55%">Email errors, comments or suggestions to
                                 <a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
                             </td>
+                            <td width="30%"></td>
                         </tr>
                     </table>
                     <table>
