--- a/src/main/webapp/SqlFormatter.html
+++ b/src/main/webapp/SqlFormatter.html
@@ -20,7 +20,7 @@
 							<table border="0" width="100%" cellpadding="10">
 								<tr>
 									<td width="15%">								
-										<input type="button" name="About" value="About" onClick="getSqlAbout(this)" />
+										<input type="button" name="About" value="User Guide" onClick="getSqlAbout(this)" />
 									</td>
 									<td width="55%">Email errors, comments or suggestions to
 										<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
