--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -88,7 +88,7 @@
                 <th align="left">AddOn</th>
             </tr>
             <tr>
-                <td><input size="20" type='text' id='player_name' name='player_name[]'/></td>
+                <td><input size="20" type='text' id='playerName' name='playerName[]'/></td>
                 <td><input size="7" type='text' value=0.00 id='buyIn' name='buyIn[]'/></td>
                 <td><input size="7" type='text' value=0.00 id='bounty' name='bounty[]'/></td>
                 <td><input size="7" type='text' value=0.00 id='fee' name='fee[]'/></td>
